@@ -17,7 +17,7 @@
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-/* $Id: mpeg2.c,v 1.4 2001-08-22 01:28:08 mschimek Exp $ */
+/* $Id: mpeg2.c,v 1.5 2001-09-13 17:15:44 garetxe Exp $ */
 
 #include <stdio.h>
 #include <stdlib.h>
@@ -337,7 +337,7 @@ mpeg2_program_stream_mux(void *muxp)
 			nstreams++;
 		}
 
-		buf = mux_output(NULL);
+		buf = mux_output(mux, NULL);
 
 		assert(buf && buf->size >= 512
 		           && buf->size <= 32768);
@@ -457,7 +457,7 @@ reschedule:
 
 		bytes_out += buf->used = p - buf->data;
 
-		buf = mux_output(buf);
+		buf = mux_output(mux, buf);
 
 		assert(buf && buf->size >= 512
 		           && buf->size <= 32768);
@@ -499,7 +499,7 @@ reschedule:
 	} else
 		buf->used = 4;
 
-	mux_output(buf);
+	mux_output(mux, buf);
 
 	pthread_cleanup_pop(1);
 
