@@ -1,6 +1,7 @@
 2001-09-13	<garetxe@users.sf.net>
 
 	* configure: Put esd_cflags and esd_libs in place.
+	* rte: removed rte_global_context
 
 2001-09-01	<mschimek@users.sf.net>
 
